practice/deploytest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: deploytest
  name: deploytest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deploytest
  strategy: 
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: deploytest
    spec:
      containers:
      - image: nginx:1.19.6
        name: nginx
        resources: {}
status: {}
