practice/podsec.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: ubuntu
  name: podsec
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - image: ubuntu
    name: ubuntu
    resources: {}
    command: ["sleep","120"]
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
