practice/readiness.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: readiness
  name: readiness
spec:
  containers:
  - image: nginx
    name: readiness
    resources: {}
    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 30
      periodSeconds: 5
      successThreshold: 3
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
