practice/saexpl.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: saexpl
  name: saexpl
spec:
  serviceAccount: sa-1
  containers:
  - image: nginx
    name: saexpl
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
