practice/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  selector:
    env: dev
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: NodePort
