practice/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2
spec:
  selector:
    env: test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: NodePort
