practice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /movies
        pathType: Prefix
        backend:
          service:
            name: movies-svc
            port:
              number: 8080
      - path: /pictures
        pathType: Prefix
        backend:
          service:
            name: pictures-svc
            port:
              number: 8080
